--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>wordnik-api-client</name>
     <version>0.0.1-SNAPSHOT</version>
     <url>https://github.com/swagger-api/swagger-codegen</url>
-    <description>Swagger Java</description>
+    <description>Wordnik Java API</description>
     <scm>
         <connection>scm:git:git@github.com:swagger-api/swagger-codegen.git</connection>
         <developerConnection>scm:git:git@github.com:swagger-api/swagger-codegen.git</developerConnection>
@@ -262,6 +262,12 @@
             <version>1.7.1</version>
             <scope>test</scope>
         </dependency>
+	<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+	<dependency>
+	  <groupId>javax.annotation</groupId>
+	  <artifactId>javax.annotation-api</artifactId>
+	  <version>1.3.2</version>
+	</dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
