--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,19 @@
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
-                    <execution>
-                        <phase>package</phase>
+                  <execution>
+		    <id>phase-package</id>
+                    <phase>package</phase>
+                    <goals>
+                      <goal>copy-dependencies</goal>
+                    </goals>
+                    <configuration>
+                      <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                    </configuration>
+                    </execution>
+		    <execution>
+		      <id>phase-compile</id>
+                        <phase>compile</phase>
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
@@ -89,16 +100,24 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.2</version>
+		<configuration>
+                  <outputDirectory>${project.build.directory}/lib</outputDirectory>
+		  <archive>
+		    <manifest>
+                      <addClasspath>true</addClasspath>
+                      <classpathPrefix>lib/</classpathPrefix>
+                      <mainClass>edu.mills.cs180a.wordnik.client.Main</mainClass>
+		    </manifest>
+		  </archive>
+		</configuration>
                 <executions>
-                    <execution>
-                        <goals>
-                            <goal>jar</goal>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
+		    <execution>
+                      <goals>
+                        <goal>jar</goal>
+                        <goal>test-jar</goal>
+                      </goals>
+		    </execution>
                 </executions>
-                <configuration>
-                </configuration>
             </plugin>
 
             <plugin>
@@ -160,6 +179,28 @@
                     </execution>
                 </executions>
             </plugin>
+	    <plugin>
+	      <artifactId>maven-assembly-plugin</artifactId>
+	      <configuration>
+		<archive>
+		  <manifest>
+		    <mainClass>edu.mills.cs180a.wordnik.client.Main</mainClass>
+		  </manifest>
+		</archive>
+		<descriptorRefs>
+		  <descriptorRef>jar-with-dependencies</descriptorRef>
+		</descriptorRefs>
+	      </configuration>
+	      <executions>
+		<execution>
+		  <id>make-assembly</id>
+		  <phase>package</phase>
+		  <goals>
+		    <goal>single</goal>
+		  </goals>
+		</execution>
+	      </executions>
+	    </plugin>
         </plugins>
     </build>
 
@@ -271,7 +312,7 @@
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.7</java.version>
+        <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <swagger-core-version>1.5.24</swagger-core-version>
